# dsers-mcp-product-py

./: .env.example  ARCHITECTURE.md  README.md  SKILL-CN.md  SKILL.md  USAGE.md  pyproject.toml  requirements.txt  server.py  smoke_dsers.py  smoke_mock.py  test_batch_acceptance.py
dropship_import_mcp/: __init__.py  mock_provider.py  provider.py  push_options.py  service.py
dsers_mcp_product/: __init__.py  browse_service.py  browse_shared.py  concurrency.py  error_map.py  job_store.py  logger.py  mock_provider.py  provider.py  push_guard.py  push_options.py  resolver.py  rules.py  security.py  service.py  sku_matcher.py  sku_remap_service.py  smithery_entry.py
dsers_provider/: __init__.py  provider.py
tests/: test_browse.py  test_infrastructure.py  test_push_guard.py  test_rules_extended.py  test_security.py  test_sku_matcher.py
vendor-dsers/: dsers_product.py
vendor-dsers/dsers_mcp_base/: auth.py  client.py
