[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "dsers-mcp-product-py"
version = "1.0.0"
description = "MCP server to automate DSers product import from AliExpress/Alibaba to Shopify"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.20.0,<2.0.0",
    "smithery>=0.4.4",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

[tool.smithery]
server = "dsers_mcp_product.smithery_entry:create_server"
