[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "dsers-mcp-product-py"
version = "1.5.7"
description = "Dropshipping automation with AI — import AliExpress/Alibaba products to Shopify & Wix via DSers. Open-source MCP server."
readme = "README.md"
requires-python = ">=3.10"
# TODO(PY-P2-03): vendor-dsers/ is not published to PyPI; it is bundled
# as a local package via sys.path manipulation in provider.py.  Consider
# publishing it or adding a proper path dependency once the API stabilises.
dependencies = [
    "mcp>=1.20.0,<2.0.0",
    "smithery>=0.4.4",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
]

[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

[tool.smithery]
server = "dsers_mcp_product.smithery_entry:create_server"
